# Linear_GKR_Protocol

./: .gitignore  Cargo.toml  README.md
src/: datastructures.rs  lib.rs
src/protocol/: gkrprover.rs  gkrverifier.rs  mod.rs
src/test/: lanczos_test.rs  mod.rs  simple_test.rs  test_circuit.txt
